Fix hero button spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,7 +530,7 @@ nav > ul > .active > a {
 	}
 
 	.hero-box > .labelled-button {
-		padding: 0.5rem;
+		padding: 0.5rem 0 0.5rem 1rem;
 	}
 
 	.hero-box > .labelled-button > a > button {
